[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.9.0"
config = "0.15.6"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }

[dependencies.sqlx]
    version = "0.8"
    default-features = false
    features = [
        "runtime-tokio",
        "tls-rustls",
        "macros",
        "postgres",
        "uuid",
        "chrono",
        "migrate"
    ]

[dev-dependencies]
reqwest = "0.12.11"

# [target.x86_64-pc-windows-msvc]
# rustflags = ["-C", "link-arg=-fuse-ld=lld"]
# [target.x86_64-pc-windows-gnu]
# rustflags = ["-C", "link-arg=-fuse-ld=lld"]
